...
class ContentViewVM: ObservableObject {
    
    @Published var users: [User] = []
    @Published var posts: [Post] = []
    @Published var comments: [Comment] = []
    
    @Published var userSelection = "User"
    @Published var postSelection = "Posts"
    @Published var commentSelection = "Comments"
    @Published var userIsExpanded = false
    @Published var postIsExpanded = false
    @Published var commentIsExpanded = false
    @Published var commentDetailIsExpanded = false
...
